modified:   .DS_Store 	new file:   static/.DS_Store 	new file:   static/react/babel.min.js 	new file:   static/react/react-dom.development.js 	new file:   static/react/react.development.js 	modified:   templates/home.html
 Changes not staged for commit:
	modified:   db.sqlite3
	modified:   frontend/package-lock.json
	modified:   frontend/package.json
	modified:   frontend/src/App.js
	modified:   frontend/src/components/index.js
	modified:   static/css/dashboard.css
	modified:   static/js/dashboard.js
	modified:   templates/home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,24 @@
     
     <h1 id="karri">Home Page</h1>
     <a href="{% url 'logout' %}" >Logout</a>
+    <div id="HomepageDiv"></div>
+
+  
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+    <script type="text/javascript" src="./Dashboard.js" ></script> -->
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+
+    <script src="{% static 'react/react.development.js' %}"></script>
+    <script src="{% static 'react/react-dom.development.js' %}"></script>
+    <!-- JSX support-->
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="{% static 'react/babel.min.js' %}"></script>
+    <script src="{% static 'js/dashboard.js' %}" type="text/babel"></script>
     
     
   
