--- a/templates/home.html
+++ b/templates/home.html
@@ -5,10 +5,12 @@
   <head>
     
   <link rel="stylesheet" type="text/css" href="{% static 'css/dashboard.css' %}">
+  
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
 
     <!-- Bootstrap CSS -->
     
@@ -18,8 +20,11 @@
   <body>
     
     <h1 id="karri">Home Page</h1>
-    <a href="{% url 'logout' %}" >Logout</a>
-    <div id="HomepageDiv"></div>
+    <Button><a href="{% url 'logout' %}" >Logout</a></Button>
+
+    <div id="like_button_container"></div>
+
+    
 
   
 
@@ -30,6 +35,8 @@
     <script type="text/javascript" src="./Dashboard.js" ></script> -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://cdn.plot.ly/plotly-2.20.0.min.js"></script>
+
 
     <script src="{% static 'react/react.development.js' %}"></script>
     <script src="{% static 'react/react-dom.development.js' %}"></script>
@@ -37,6 +44,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="{% static 'react/babel.min.js' %}"></script>
     <script src="{% static 'js/dashboard.js' %}" type="text/babel"></script>
+
     
     
   
