--- a/templates/home.html
+++ b/templates/home.html
@@ -19,8 +19,13 @@
   </head>
   <body>
     
-    <h1 id="karri">Home Page</h1>
+    <div class="title">
+      <h1 id="karri">Home Page</h1>
     <Button><a href="{% url 'logout' %}" >Logout</a></Button>
+    <Button><a href="{% url 'home' %}">RELOAD</a></Button>
+    </div>
+
+   
 
     <div id="like_button_container"></div>
 
@@ -44,6 +49,7 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="{% static 'react/babel.min.js' %}"></script>
     <script src="{% static 'js/dashboard.js' %}" type="text/babel"></script>
+    <script src="{% static 'js/Finance2.js' %}" type="text/babel"></script>
 
     
     
