--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -5,6 +5,26 @@ body{
     background: linear-gradient(90deg, rgba(54,217,182,1) 0%, rgba(32,152,126,1) 43%, rgba(0,212,255,1) 100%);
   }
 
+  .accountdetails{
+    max-width: 40%;
+    background-color: rgb(233, 233, 154);
+    padding:10px;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    justify-self: center;
+    margin-top:10px;
+    
+
+    
+  }
+  
+
+  
+
   h1, h2, h3, h4, h5, p, span, strike{
     font-family: 'Montserrat', sans-serif;
   
