--- a/templates/purchasefailed.html
+++ b/templates/purchasefailed.html
@@ -3,4 +3,4 @@
 <h1>Purchase Failed :(</h1>
 <p>You do not have enough money to purchase the stock</p>
 Press the button to redirect to your Dashboard
-<a href="{% url 'home' %}">click</a>
+<Button><a href="{% url 'home' %}">DashBorad</a></Button>
